{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 61,
  "lineage": "83cb436c-2a87-1602-8a7f-d2a970d300a0",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb_rails_postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:706169056500:loadbalancer/app/production-alb-rails-postgres/574658a9455ded3d",
            "arn_suffix": "app/production-alb-rails-postgres/574658a9455ded3d",
            "desync_mitigation_mode": "defensive",
            "dns_name": "production-alb-rails-postgres-891606057.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:706169056500:loadbalancer/app/production-alb-rails-postgres/574658a9455ded3d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "production-alb-rails-postgres",
            "security_groups": [
              "sg-0a58575b6ea527747"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0e90bbeedc815455c"
              },
              {
                "subnet_id": "subnet-0f6d2d11f4ccae1d6"
              }
            ],
            "subnets": [
              "subnet-0e90bbeedc815455c",
              "subnet-0f6d2d11f4ccae1d6"
            ],
            "tags": {
              "Environment": "production",
              "Name": "production-alb-rails_postgres"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "production-alb-rails_postgres"
            },
            "vpc_id": "vpc-0298690a46596817f",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc",
            "module.ecs.aws_security_group.web_inbound_sg",
            "module.networking.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "rails_postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:706169056500:listener/app/production-alb-rails-postgres/574658a9455ded3d/e9487eece29f79a9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:706169056500:targetgroup/production-alb-target-group-ae74/12941e1a89aa9c49",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:706169056500:listener/app/production-alb-rails-postgres/574658a9455ded3d/e9487eece29f79a9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:706169056500:loadbalancer/app/production-alb-rails-postgres/574658a9455ded3d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_alb_target_group.alb_target_group",
            "module.ecs.aws_security_group.web_inbound_sg",
            "module.ecs.random_id.target_group_sufix",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc",
            "module.ecs.aws_alb.alb_rails_postgres"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:706169056500:targetgroup/production-alb-target-group-ae74/12941e1a89aa9c49",
            "arn_suffix": "targetgroup/production-alb-target-group-ae74/12941e1a89aa9c49",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:706169056500:targetgroup/production-alb-target-group-ae74/12941e1a89aa9c49",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "production-alb-target-group-ae74",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0298690a46596817f"
          },
          "dependencies": [
            "module.ecs.random_id.target_group_sufix",
            "module.networking.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:706169056500:security-group/sg-05034d4726760c472",
            "description": "Allow egress from container",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05034d4726760c472",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "production-ecs-service-sg",
            "name_prefix": "",
            "owner_id": "706169056500",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "production-ecs-service-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "production-ecs-service-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0298690a46596817f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_inbound_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:706169056500:security-group/sg-0a58575b6ea527747",
            "description": "Allow HTTP from Anywhere into ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a58575b6ea527747",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "production-web-inbound-sg",
            "name_prefix": "",
            "owner_id": "706169056500",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "production-web-inbound-sg"
            },
            "tags_all": {
              "Name": "production-web-inbound-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0298690a46596817f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08a22fc53d611a693",
            "association_id": "eipassoc-08f2fcc07378e2985",
            "domain": "vpc",
            "id": "eipalloc-08a22fc53d611a693",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0e22f70df894003da",
            "private_dns": "ip-10-0-1-47.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.47",
            "public_dns": "ec2-13-231-73-186.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "13.231.73.186",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:706169056500:internet-gateway/igw-05369785ab9bf26bb",
            "id": "igw-05369785ab9bf26bb",
            "owner_id": "706169056500",
            "tags": {
              "Environment": "production",
              "Name": "production-igw"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "production-igw"
            },
            "vpc_id": "vpc-0298690a46596817f"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08a22fc53d611a693",
            "connectivity_type": "public",
            "id": "nat-037582c2a01b04c83",
            "network_interface_id": "eni-0e22f70df894003da",
            "private_ip": "10.0.1.47",
            "public_ip": "13.231.73.186",
            "subnet_id": "subnet-0f6d2d11f4ccae1d6",
            "tags": {
              "Environment": "production",
              "Name": "production-ap-northeast-1a-nat"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "production-ap-northeast-1a-nat"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e14ad84ac5aee1331080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-037582c2a01b04c83",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e14ad84ac5aee133",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc",
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.ig"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05369785ab9bf26bb",
            "id": "r-rtb-02295385ccfa2e6831080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02295385ccfa2e683",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_route_table.public",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:706169056500:route-table/rtb-0e14ad84ac5aee133",
            "id": "rtb-0e14ad84ac5aee133",
            "owner_id": "706169056500",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-037582c2a01b04c83",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "production-private-route-table"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "production-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0298690a46596817f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:706169056500:route-table/rtb-02295385ccfa2e683",
            "id": "rtb-02295385ccfa2e683",
            "owner_id": "706169056500",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05369785ab9bf26bb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "production-public-route-table"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "production-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0298690a46596817f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0802c3789812bd38a",
            "route_table_id": "rtb-0e14ad84ac5aee133",
            "subnet_id": "subnet-030b6d2c2d295ba0a"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ae6eb36be08c118",
            "route_table_id": "rtb-0e14ad84ac5aee133",
            "subnet_id": "subnet-018722fee863afca8"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c875341fa4a067fd",
            "route_table_id": "rtb-02295385ccfa2e683",
            "subnet_id": "subnet-0f6d2d11f4ccae1d6"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012e4a7a52e8a1efa",
            "route_table_id": "rtb-02295385ccfa2e683",
            "subnet_id": "subnet-0e90bbeedc815455c"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:706169056500:security-group/sg-07762dd9e9b70aea4",
            "description": "Default security group to allow inbound/outbound from the VPC",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-07762dd9e9b70aea4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "production-default-sg",
            "name_prefix": "",
            "owner_id": "706169056500",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "timeouts": null,
            "vpc_id": "vpc-0298690a46596817f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:706169056500:subnet/subnet-030b6d2c2d295ba0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-030b6d2c2d295ba0a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "706169056500",
            "tags": {
              "Environment": "production",
              "Name": "production-ap-northeast-1a-private-subnet"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "production-ap-northeast-1a-private-subnet"
            },
            "vpc_id": "vpc-0298690a46596817f"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:706169056500:subnet/subnet-018722fee863afca8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.20.0/24",
            "id": "subnet-018722fee863afca8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "706169056500",
            "tags": {
              "Environment": "production",
              "Name": "production-ap-northeast-1c-private-subnet"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "production-ap-northeast-1c-private-subnet"
            },
            "vpc_id": "vpc-0298690a46596817f"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:706169056500:subnet/subnet-0f6d2d11f4ccae1d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0f6d2d11f4ccae1d6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "706169056500",
            "tags": {
              "Environment": "production",
              "Name": "production-ap-northeast-1a-public-subnet"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "production-ap-northeast-1a-public-subnet"
            },
            "vpc_id": "vpc-0298690a46596817f"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:706169056500:subnet/subnet-0e90bbeedc815455c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0e90bbeedc815455c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "706169056500",
            "tags": {
              "Environment": "production",
              "Name": "production-ap-northeast-1c-public-subnet"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "production-ap-northeast-1c-public-subnet"
            },
            "vpc_id": "vpc-0298690a46596817f"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:706169056500:vpc/vpc-0298690a46596817f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d14c201cb74eb83d",
            "default_route_table_id": "rtb-0c6a1250580f4c5c8",
            "default_security_group_id": "sg-0d6f9095a87fd3552",
            "dhcp_options_id": "dopt-04704313bd13d9f66",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0298690a46596817f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c6a1250580f4c5c8",
            "owner_id": "706169056500",
            "tags": {
              "Environment": "production",
              "Name": "production-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "production-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_access_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:706169056500:security-group/sg-0f8d287586cfaf6de",
            "description": "Allow access to RDS",
            "egress": [],
            "id": "sg-0f8d287586cfaf6de",
            "ingress": [],
            "name": "production-db-access-sg",
            "name_prefix": "",
            "owner_id": "706169056500",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "production-db-access-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "production-db-access-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0298690a46596817f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_key_pair.key_pair",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_route.private_nat_gateway",
            "module.networking.aws_route_table_association.private",
            "module.networking.aws_security_group.default",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc",
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_route.public_internet_gateway",
            "module.networking.aws_route_table.private",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.public",
            "tls_private_key.keygen"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:706169056500:security-group/sg-0c07145934b0e675d",
            "description": "production Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c07145934b0e675d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f8d287586cfaf6de"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "production-rds-sg",
            "name_prefix": "",
            "owner_id": "706169056500",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "production-rds-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "production-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0298690a46596817f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_route.private_nat_gateway",
            "module.networking.aws_route_table_association.private",
            "module.networking.aws_security_group.default",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_route.public_internet_gateway",
            "module.networking.aws_subnet.private_subnet",
            "tls_private_key.keygen",
            "module.networking.aws_route_table.private",
            "module.networking.aws_vpc.vpc",
            "aws_key_pair.key_pair",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.public",
            "module.rds.aws_security_group.db_access_sg"
          ]
        }
      ]
    }
  ]
}